[gd_scene load_steps=7 format=3 uid="uid://843pyc871ejq"]

[ext_resource type="PackedScene" uid="uid://dhf74egj0b4jv" path="res://scenes/minigames/minigame_base.tscn" id="1_base"]
[ext_resource type="Script" uid="uid://d3m8lal6p2n1" path="res://scripts/minigames/jumping_platforms.gd" id="2_script"]
[ext_resource type="PackedScene" uid="uid://c4kxxkpsq38jt" path="res://players/player1.tscn" id="3_7ts5n"]
[ext_resource type="AudioStream" uid="uid://ca63miah030k5" path="res://sfx/34  - Fight.ogg" id="3_uum82"]
[ext_resource type="PackedScene" uid="uid://cmy06endigfl2" path="res://players/player2.tscn" id="4_bf7lg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_platform"]
size = Vector2(1280, 40)

[node name="JumpingPlatforms" instance=ExtResource("1_base")]
script = ExtResource("2_script")

[node name="TitleLabel" parent="UI/IntroContainer/VBoxContainer" index="0"]
text = "Jumping Platforms!"

[node name="DescriptionLabel" parent="UI/IntroContainer/VBoxContainer" index="2"]
text = "Jump on platforms and reach the highest point! Push enemies to make them fall!
Controls:
Player 1: A/D (move) + W (jump) + Space (push)
Player 2: Left/Right Arrows (move) + Up Arrow (jump) + Enter (push)"

[node name="HeightContainer" type="HBoxContainer" parent="UI" index="3"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 10.0
offset_right = 200.0
offset_bottom = 40.0
grow_horizontal = 2
theme_override_constants/separation = 40

[node name="Player1HeightLabel" type="Label" parent="UI/HeightContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 0.2, 0.2, 1)
theme_override_font_sizes/font_size = 20
text = "Player 1: 0m"
horizontal_alignment = 1

[node name="Player2HeightLabel" type="Label" parent="UI/HeightContainer" index="1"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.2, 0.4, 1, 1)
theme_override_font_sizes/font_size = 20
text = "Player 2: 0m"
horizontal_alignment = 1

[node name="GameContainer" type="Node2D" parent="." index="1"]
editor_description = "Container for camera, players, platforms, etc."

[node name="Camera2D" type="Camera2D" parent="GameContainer" index="0"]
position = Vector2(640, 600)

[node name="Background" type="ColorRect" parent="GameContainer" index="1"]
offset_left = -5000.0
offset_top = -5000.0
offset_right = 5000.0
offset_bottom = 5000.0
color = Color(0.2, 0.6, 0.9, 1)
metadata/_edit_lock_ = true

[node name="PlatformSpawnTimer" type="Timer" parent="GameContainer" index="2"]
wait_time = 0.5

[node name="PlatformContainer" type="Node2D" parent="GameContainer" index="3"]
editor_description = "Platforms will be added as children to this node"

[node name="PlayerSpawnPositions" type="Node2D" parent="GameContainer" index="4"]
editor_description = "Starting positions for players"

[node name="P1Spawn" type="Marker2D" parent="GameContainer/PlayerSpawnPositions" index="0"]
position = Vector2(540, 720)

[node name="P2Spawn" type="Marker2D" parent="GameContainer/PlayerSpawnPositions" index="1"]
position = Vector2(740, 720)

[node name="Players" type="Node2D" parent="GameContainer" index="5"]

[node name="Player1" parent="GameContainer/Players" index="0" instance=ExtResource("3_7ts5n")]

[node name="Player2" parent="GameContainer/Players" index="1" instance=ExtResource("4_bf7lg")]

[node name="GroundPlatform" type="StaticBody2D" parent="GameContainer" index="6"]
position = Vector2(640, 750)
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameContainer/GroundPlatform" index="0"]
position = Vector2(0, 10)
shape = SubResource("RectangleShape2D_platform")

[node name="ColorRect" type="ColorRect" parent="GameContainer/GroundPlatform" index="1"]
offset_left = -640.0
offset_top = -10.0
offset_right = 640.0
offset_bottom = 50.0
color = Color(0.2, 0.5, 0.2, 1)

[node name="DebugInfo" type="Label" parent="GameContainer" index="7"]
offset_left = 20.0
offset_top = 60.0
offset_right = 220.0
offset_bottom = 130.0
theme_override_font_sizes/font_size = 12
text = "Camera Y: 0
Platforms: 0
Highest Player: 0"

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="." index="2"]
stream = ExtResource("3_uum82")
bus = &"Minigames BGM"
